--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,14 @@ dependencies:
   google_fonts: ^4.0.5
   flutter_dotenv: ^5.0.2
   retry: ^3.1.2
+  flutter_localizations:
+    sdk: flutter
+  intl: any
+  shared_preferences: ^2.1.2
+  firebase_messaging: ^14.6.3
+  firebase_core: ^2.14.0
+  firebase_analytics: ^10.4.3
+  flutter_local_notifications: ^14.1.1
 
 dev_dependencies:
   flutter_test:
@@ -56,6 +64,7 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  generate: true
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
