--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.latihan_1">
+    package="id.co.infimedia">
+   <uses-permission android:name="android.permission.INTERNET"/>
    <application
-        android:label="latihan_1"
+        android:label="infimedia"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
